# external_texture_flutter_linux

./: README.md  pubspec.yaml  run_linux.sh
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/desktop_texture_tests_flutter/: MainActivity.kt
external_texture/: README.md  pubspec.yaml
external_texture/android/: build.gradle  settings.gradle
external_texture/android/src/main/: AndroidManifest.xml
external_texture/android/src/main/kotlin/com/lattice0/external_texture/: ExternalTexturePlugin.kt
external_texture/android/src/main/kotlin/com/lucaszanella/external_texture/: ExternalTexturePlugin.kt
external_texture/example/: README.md  pubspec.yaml
external_texture/example/android/app/: build.gradle
external_texture/example/android/app/src/debug/: AndroidManifest.xml
external_texture/example/android/app/src/main/: AndroidManifest.xml
external_texture/example/android/app/src/main/kotlin/com/lattice0/external_texture_example/: MainActivity.kt
external_texture/example/android/app/src/main/kotlin/com/lucaszanella/external_texture_example/: MainActivity.kt
external_texture/example/ios/Runner/: Info.plist
external_texture/example/ios/Runner.xcodeproj/: project.pbxproj
external_texture/example/lib/: main.dart
external_texture/example/linux/: CMakeLists.txt  my_application.cc
external_texture/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
external_texture/example/test/: widget_test.dart
external_texture/ios/: external_texture.podspec
external_texture/ios/Classes/: ExternalTexturePlugin.h  ExternalTexturePlugin.m  SwiftExternalTexturePlugin.swift
external_texture/lib/: external_texture.dart
external_texture/linux/: CMakeLists.txt  external_texture_plugin.cc  fl_my_texture_gl.cc  opengl_renderer.cpp
external_texture/linux/include/external_texture/: external_texture_plugin.h  fl_my_texture_gl.h  opengl_renderer.h
external_texture/test/: external_texture_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
